--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,6 +15,18 @@
     <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
   </div>
 
+    <div class="form-group">
+  <%= f.label "Profile Picture" %>
+  <% if resource.avatar.attached? %>
+  <% if ActiveStorage::Blob#avatar? %>
+  <%= image_tag resource.avatar.variant(resize: "100x100!") %>
+  <% end %>
+  <% else %>
+  <img src="../../assets/image/icon.jpeg">
+  <% end %>
+  <%= f.file_field :avatar, class: 'form-control' %>
+  </div>
+
   <div class="form-group">
     <%= f.label :password %>
     <%= f.password_field :password, autocomplete: 'new-password', class: 'form-control' %>
