--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -23,9 +23,12 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+        <% if user_signed_in? %>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        
+        <%= link_to "Sign out", destroy_user_session_path, method: "Delete" , class: "nav-link"  %>
       </li>
+      <% end %>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
