Added all the views

--- a/app/views/allusers/_user.html.erb
+++ b/app/views/allusers/_user.html.erb
@@ -1,4 +1,5 @@
 <li class="list_item">
-    <%= link_to user.username, allusers_path %>
+ 
+    <%= link_to user.username, alluser %>
     <%= render 'friend_buttons', user: user %>
 </li>
