--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
 <li class="list_item">
-    <%= link_to user.username, allusers_path %>
+    <%= link_to user.username, user %>
     <%= render 'friend_buttons', user: user %>
 </li>
