--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div class="comment-container">
 <div class="comment">
-    <span class="comment-user"><%= link_to comment.user.username, alluser_path(comment.user)%> </span>
+    <span class="comment-user"><%= link_to comment.user.username, user_path(comment.user)%> </span>
     <span class="comment-content"><%= comment.content %></span>
     </div>
   <% if comment.user.id == current_user.id %>
