--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,7 @@
 <div class="posts">
   <header>
     <div class="name-container">
-      <h3 class="post-user-name"><%=link_to post.user.username, alluser_path(post.user)%></h3>
+      <h3 class="post-user-name"><%=link_to post.user.username, user_path(post.user)%></h3>
       <time class="post-time" datetime="<%=post.created_at%>"><%= time_ago_in_words(post.created_at) %>
         ago.
       </time>
