--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,36 +1,53 @@
-<div class="posts">
-  <header>
-    <div class="name-container">
-      <h3 class="post-user-name"><%=link_to post.user.username, user_path(post.user)%></h3>
-      <time class="post-time" datetime="<%=post.created_at%>"><%= time_ago_in_words(post.created_at) %>
-        ago.
-      </time>
-    </div>
-    <% if post.user == current_user %>
-      <div class="dropdown">
-        <button class="dropbtn">
-          <i class="fas fa-ellipsis-v"></i>
-        </button>
-        <div class="dropdown-content">
-          <%= link_to 'Edit', edit_post_path(post.id) %>
-          <%= link_to 'Delete', post_path(post.id), method: :delete %>
-        </div>
-      </div>
-    <% end %>
+<div class="container">
+    <div class="col-md-12 col-lg-12">
+        <article class="post vt-post">
+            <div class="row">
+                <div class="col-xs-12 col-sm-5 col-md-5 col-lg-4">
+                    <div class="post-type post-img">
+                        <a href="#"><img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-responsive" alt="image post"></a>
+                    </div>
+                    <div class="author-info author-info-2">
+                        <ul class="list-inline">
+                            <li>
+                                <div class="info">
+                                    <h3 class="post-user-name "><%=link_to post.user.username, user_path(post.user)%></h3>
+                                    <time class="post-time d-inline" datetime="<%=post.created_at%>"><%= time_ago_in_words(post.created_at) %> ago
+                            </li>
+                            <li>
+                                <div class="info">
+                                   <div class="count">
+                                          <span class="likes-count d-inline"><%= render 'like_unlike', post: post %>
+                                            <span><%= post.likes.count if post.likes.any? %></span>
+                                          </span>
+                                        <%= render 'comment_icon', class:"d-inline" %>
+                                            <%= post.comments.count if post.comments.any? %></span>
+                                        </div>
 
-  </header>
-  <p class="post-content"><%= post.content %></p>
-  <div class="count">
-    <span class="likes-count"><%= render 'like_unlike', post: post %>
-      <span><%= post.likes.count if post.likes.any? %></span>
-    </span>
-    <span class="comments-count"><%= render 'comment_icon' %>
-      <%= post.comments.count if post.comments.any? %></span>
-  </div>
+                                        <% if post.comments.any? %>
+                                          <%= render post.comments %>
+                                        <% end %>
 
-  <% if post.comments.any? %>
-    <%= render post.comments %>
-  <% end %>
+                                        <%= render 'comments/new_comment', post: post %>
+                                      </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-7 col-md-7 col-lg-8">
+                    <div class="caption">
+                         <p class="post-content"><%= post.content %></p>
 
-  <%= render 'comments/new_comment', post: post %>
-</div>
+                         <% if post.user == current_user %>
+                            <div class="dropdown">
+                              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-ellipsis-v"></i>
+                                                              </button>
+                              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <%= link_to 'Edit', edit_post_path(post.id), class: "dropdown-item" %> 
+                              <%= link_to 'Delete', post_path(post.id), method: :delete, class: "dropdown-item" %>
+                              </div>
+                            </div>      <% end %>
+                       
+                </div>
+            </div>
+        </article>
