--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,7 @@
     </ul>
   </div>
 
+
   <div class="col-md-3">
     <div class="panel panel-primary">
       <div class="panel-heading">
@@ -19,7 +20,9 @@
       <div class="panel-body">
         <ul>
           <% @users.each do |user| %>
-            <li><%= link_to user.email, conversations_path(user), remote: true, method: :post %></li>
+            <% if current_user.friend?(user)%>
+            <li><%= link_to user.username, conversations_path(user_id: user),remote: true, method: :post %></li>
+            <% end %>
           <% end %>
         </ul>
       </div>
