--- a/app/views/application/_delete_icon.html.erb
+++ b/app/views/application/_delete_icon.html.erb
@@ -1,1 +1,3 @@
+<div class="icon"> 
 <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/64/000000/external-delete-miscellaneous-kiranshastry-lineal-kiranshastry.png"/>
+</div>
