--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,6 +4,11 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+
+
+
+
+  <% if user_signed_in? %>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
@@ -18,6 +23,7 @@
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Users
         </a>
+        
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/users">Show all Users</a>
           <a class="dropdown-item" href="/users/edit">Edit details</a>
@@ -25,10 +31,9 @@
           <%= link_to "Sign out", destroy_user_session_path, method: "Delete" , class: "dropdown-item"  %>
         </div>
       </li>
-        <% if user_signed_in? %>
+      
       <li class="nav-item">
-        
-        
+        <%= link_to "Sign Out",destroy_user_session_path ,method: :delete, class:"nav-link" %>
       </li>
       <% end %>
     </ul>
